Adding typing animation to whole home page. Still not completely done

--- a/src/components/custom.css
+++ b/src/components/custom.css
@@ -104,7 +104,7 @@
 
 .Typist .Cursor--blinking {
   /* all: revert; */
-  @apply text-7xl;
+  /* @apply text-7xl; */
   color: #eadb8a;
   opacity: 1;
   animation: my-blink 1s linear infinite;
