--- a/src/styles/Link.css
+++ b/src/styles/Link.css
@@ -66,20 +66,20 @@
   width: 50%;
 }
 
-.link-red {
-  --link-color: red;
+.link-color-1 {
+  --link-color: #ff4d4d;
 }
 
-.link-blue {
-  --link-color: blue;
+.link-color-2 {
+  --link-color: #ffa500;
 }
 
-.link-green {
-  --link-color: green;
+.link-color-3 {
+  --link-color: #b450e1;
 }
 
-.link-yellow {
-  --link-color: yellow;
+.link-color-4 {
+  --link-color: #00cc00;
 }
 
 .link-gold {
